<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_cat_paw_bg"
    android:gravity="center_horizontal"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".EndOfQuizActivity">

    <TextView
        android:id="@+id/quizScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/quiz_score"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/catTrophy"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/trophy_cat_pic"
        android:src="@drawable/ic_real_trophy" />

    <TextView
        android:id="@+id/finishedQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:text="@string/congrats_message"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/username"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:text="@string/score_report"/>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/doneButtonColour"
        android:onClick="onDoneButtonClicked"
        android:text="@string/done_button"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>
